fixed sidenav bar z-index

--- a/styles.css
+++ b/styles.css
@@ -507,7 +507,7 @@ a:active {
   height: auto;
   width: 0;
   position: fixed;
-  z-index: 3;
+  z-index: 6;
   top: 0;
   left: 0;
   background-color: rgba(17, 17, 17, 0.507);
